# solvent-test

./: Anchor.toml
app/: package-lock.json  package-lock.json.old  package.json  tsconfig.json  webpack.config.js
app/config/: webpack.config.js
app/src/: App.tsx
app/src/components/: Collectibles.tsx  Dashboard.tsx  Wallet.tsx  collectibles.scss  display-account.scss
app/src/components/details/: NftDetails.tsx  nft-details.scss
app/src/components/sub-components/: ListCollectibles.tsx  list-collectibles.scss
app/src/helpers/: routes.js  wallet.ts
app/src/views/: Home.tsx  home.scss
programs/solvent-test/: Cargo.toml
programs/solvent-test/src/: lib.rs
tests/: solvent-test.ts
